# orderly-web-deploy

./: .gitignore  .travis.yml  MANIFEST.in  README.md  architecture.md  conftest.py  publish.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml  test.yml
buildkite/: pipeline.yml
config/basic/: orderly-web.yml
config/breaking/: extra.yml  orderly-web.yml
config/complete/: orderly-web.yml  variables.scss
config/customcss/: orderly-web.yml  variables.scss
config/montagu/: orderly-web.yml
config/multiple-workers/: orderly-web.yml
config/noproxy/: orderly-web.yml
config/packit/: orderly-web.yml
config/vault/: orderly-web.yml
diagrams/: orderly-architecture.drawio
example/: orderly-web.yml
orderly_web/: __about__.py  __init__.py  admin.py  cli.py  config.py  constellation.py  deploy.py  docker_helpers.py  errors.py  notify.py  pull.py  start.py  status.py  stop.py  teardown.py  users.py  vault.py
orderly_web/tests/: test_config.py  test_docker_helpers.py  test_integration.py
proxy/: Dockerfile  README.md  build  common  nginx.conf  push
scripts/: clear_docker  teamcity.sh
test/: test_cli.py  test_cli_parse.py  test_config.py  test_docker_helpers.py  test_integration.py  test_stop.py  test_vault.py
